--- a/repo/.gitattributes
+++ b/repo/.gitattributes
@@ -1,2 +1,2 @@
 *.pkg filter=lfs diff=lfs merge=lfs -text
-ffconfig.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
