better url for Vidyo

--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,7 @@
         }, 
         {
             "hash": "skip", 
-            "url": "https://v.mozilla.com/download.html?lang=en#", 
+            "url": "https://v.mozilla.com/upload/VidyoDesktopInstaller-macosx-TAG_VD_3_6_9_014.dmg", 
             "item": "Vidyo", 
             "version": "", 
             "dmg-installer": "VidyoDesktopInstaller.pkg", 
