--- a/repo/.gitattributes
+++ b/repo/.gitattributes
@@ -1,3 +1,4 @@
 *.pkg filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
