Removing pre-filling the user account in case pocket / mozillafoundation users receive machines with this build.

--- a/repo/custom.properties
+++ b/repo/custom.properties
@@ -40,7 +40,7 @@ registrationKey=
 
 ## The username to use when authorizing the computer.
 ## Accepts any authority parameters listed above.
-username="${username}@mozilla.com"
+username=
 
 ## The password used when authorizing the computer.
 ## Accepts any authority parameters listed above.
