--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
-language: shell
-script:
-  - bash -c 'shopt -s globstar; shellcheck **/*.sh'
+matrix:
+    include: 
+        - language: shell
+          script:
+             - bash -c 'shopt -s globstar; shellcheck **/*.sh'
+
+    include:
+        - language: python
+          python: 2.7
+          script:
+            - pip install flake8
+              flake8 --max-line-length 100 .
