--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ matrix:
           python: 2.7
           script:
             - pip install flake8
-              flake8 --max-line-length 100 .
+            - flake8 --max-line-length 100 .
