--- a/production_manifest.json
+++ b/production_manifest.json
@@ -103,7 +103,7 @@
         {
             "item": "Install Zoom",
             "version": "4.4.52595.0425",
-            "url": "https://zoom.us/client/4.4.52595.0425/ZoomInstallerIT.pkg",
+            "url": "https://zoom.us/client/${version}/ZoomInstallerIT.pkg",
             "filename": "ZoomInstallerIT.pkg",
             "dmg-installer": "",
             "dmg-advanced": "",
