--- a/resources/.gitattributes
+++ b/resources/.gitattributes
@@ -1,4 +1,5 @@
 *.pkg filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
+# bypass lfs for png temporarily
+#*.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
