--- a/resources/corsica/.gitattributes
+++ b/resources/corsica/.gitattributes
@@ -1,1 +1,2 @@
-corsica-user.pkg filter=lfs diff=lfs merge=lfs -text
+# remove this file from lfs
+# corsica-user.pkg filter=lfs diff=lfs merge=lfs -text
