change rosetta item name so it's a bit more clear
change rosetta item name so that it shows that there is a check for arm or x86.

--- a/production_manifest.json
+++ b/production_manifest.json
@@ -51,7 +51,7 @@
             "type": "shell"
         },
         {
-            "item": "Install Rosetta 2 for arm systems",
+            "item": "Install Rosetta 2 if on an arm system",
             "version": "",
             "url": "resources/install-rosetta2.sh",
             "filename": "",
